--- a/index.html
+++ b/index.html
@@ -5,20 +5,73 @@
         <title>静清ARサンプル（ワイヤーフレーム）</title>
         <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <style>
+            body {
+                margin: 0;
+                overflow: hidden;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+            #controls {
+                position: absolute;
+                bottom: 10px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+            }
+            #controls button {
+                margin: 5px;
+            }
+        </style>
     </head>
     <body>
         <a-scene embedded arjs="debugUIEnabled:false;">
-	<a-assets>
-		<a-asset-item id="obj" src="tinker.obj">
-		</a-asset-item>
-		<a-asset-item id="mtl" src="obj.mtl">
-		</a-asset-item>
-	</a-assets>
-    <a-marker type="pattern" url="sei.patt">
-	<a-obj-model	src = "#obj"	mtl = "#mtl"	scale = "0.1 0.1 0.1"	rotation = "0 180 0"	position = "0 0 0">
-	</a-obj-model>
-    </a-marker>
-    <a-entity camera></a-entity>
-    </a-scene>
+            <a-assets>
+                <a-asset-item id="obj" src="tinker.obj"></a-asset-item>
+                <a-asset-item id="mtl" src="obj.mtl"></a-asset-item>
+            </a-assets>
+            <a-marker type="pattern" url="sei.patt">
+                <a-obj-model id="model" src="#obj" mtl="#mtl" scale="0.1 0.1 0.1" rotation="0 180 0" position="0 0 0"></a-obj-model>
+            </a-marker>
+            <a-entity camera></a-entity>
+        </a-scene>
+
+        <div id="controls">
+            <button id="startRotation">回転開始</button>
+            <button id="stopRotation">回転停止</button>
+        </div>
+
+        <script>
+            // モデルの回転を制御するフラグと速度
+            let rotating = false;
+            const rotationSpeed = 1; // 回転の速度
+
+            // モデルの参照
+            const model = document.getElementById('model');
+
+            // 回転を制御する関数
+            function rotateModel() {
+                if (rotating) {
+                    const rotation = model.getAttribute('rotation');
+                    rotation.y += rotationSpeed; // Y軸を中心に回転
+                    model.setAttribute('rotation', rotation);
+                }
+                requestAnimationFrame(rotateModel); // 次のフレームで再び呼び出す
+            }
+
+            // 回転開始ボタンのイベントリスナー
+            document.getElementById('startRotation').addEventListener('click', () => {
+                rotating = true; // 回転を開始
+            });
+
+            // 回転停止ボタンのイベントリスナー
+            document.getElementById('stopRotation').addEventListener('click', () => {
+                rotating = false; // 回転を停止
+            });
+
+            // 初期状態で回転を制御する関数を呼び出す
+            rotateModel();
+        </script>
     </body>
 </html>
